--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>PetPost</title>
+    <meta name="og:description" content="A social media app for pets!" />
+    <meta
+      name="og:image"
+      content="https://static-00.iconduck.com/assets.00/hamster-emoji-2048x1715-iklx3ovt.png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
